# filepipe

./: Cargo.toml  ReadMe.Md  test.yaml
diagrams/: data schema.puml  domaim model.puml  high level class diagram.puml
src/: app.rs  cli.rs  lib.rs  main.rs
src/controllers/: job_submission_controller.rs  mod.rs
src/data_source/: identity_map.rs  job_submission_repository.rs  mod.rs  program_repository.rs
src/data_source/config_files/: jobs_config.rs
src/data_source/config_files/jobs_config/: inputs.rs
src/data_source/serialisation/: mod.rs  serde_program_linker.rs
src/data_soure/configs/: config_loader.rs  jobs.rs  mod.rs  transformers.rs
src/domain/: domain_object.rs  input.rs  job.rs  job_submission.rs  mod.rs  output.rs  program.rs  programs.rs  workflow.rs
src/domain/dependency/: mod.rs
src/domain/input/: inputs.rs  regex_file.rs  single_file.rs
src/domain/job_submission/: job_config.rs  job_submission_state.rs
src/domain/job_submission/job_submission_state/: dead_state.rs  preparing_state.rs
src/domain/program/: non_interactive_program.rs  program_factory.rs
src/domain/transformer/: mod.rs
src/models/: job.rs  mod.rs
src/models/file_specifier/: mod.rs  regex_file_specifier.rs  single_file_specifier.rs
src/models/transformer/: mod.rs  non_interactive_transformer.rs
tests/: job_controller_test.rs
