[package]
name = "filepipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
clap = {version = "4.0.19", features = ["derive"]}
serde = "1.0"
serde_yaml = "0.9"
