[package]
name = "filepipe"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
clap = {version = "4.0.19", features = ["derive"]}
derive_more = "0.99.17"
thiserror = "1.0.37"
serde = {version="1.0.147", features = ["derive"]}
derive-new = "0.5.9"
regex = "1.7.0"
ambassador = "0.3.5"

[dev-dependencies]
mockall = "0.11.3"
mockall_double = "0.3.0"
